--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -28,6 +28,7 @@ library
         MIDI.Performance
         MIDI.ToMIDI
         MIDI.InstrChannel
+        MIDI.Synthesizer
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -36,7 +37,8 @@ library
     -- other-extensions:
     build-depends:    
         base ^>=4.17.2.0,
-        HCodecs ^>=0.5.2
+        HCodecs ^>=0.5.2,
+        PortMidi ^>=0.2.0
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -51,6 +53,7 @@ executable haskell-musical-composition
     build-depends:
         base ^>=4.17.2.0,
         HCodecs ^>=0.5.2,
+        PortMidi ^>=0.2.0,
         haskell-musical-composition
 
     hs-source-dirs:   app
