--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -43,7 +43,7 @@ library
         base ^>=4.17.2.0,
         HCodecs ^>=0.5.2,
         PortMidi ^>=0.2.0,
-        parsec, mtl          
+        parsec, mtl, filepath          
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -59,7 +59,7 @@ executable haskell-musical-composition
         base ^>=4.17.2.0,
         HCodecs ^>=0.5.2,
         PortMidi ^>=0.2.0,
-        parsec, mtl,
+        parsec, mtl, filepath,
         haskell-musical-composition
 
     hs-source-dirs:   app
