--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -25,6 +25,7 @@ library
     exposed-modules:  
         Music.Data
         Music.Utils
+        Music.Show
         MIDI.Performance
         MIDI.ToMIDI
         MIDI.InstrChannel
