fix: midi cleanup

--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -35,6 +35,7 @@ library
         Input.Mappings
         Input.State
         Input.Helpers
+        Input.Messages
 
     -- Modules included in this library but not exported.
     -- other-modules:
