--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -38,6 +38,7 @@ library
         Input.Helpers
         Input.Messages
         Visual.UploadFile
+        Visual.CreateScore
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -50,7 +51,8 @@ library
         PortMidi ^>=0.2.0,
         parsec, mtl, filepath,
         http-client, http-client-tls,
-        bytestring, http-types, text
+        bytestring, http-types, text,
+        process
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -69,6 +71,7 @@ executable haskell-musical-composition
         parsec, mtl, filepath,
         http-client, http-client-tls,
         bytestring, http-types, text,
+        process,
         haskell-musical-composition
 
     hs-source-dirs:   app
