--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -52,7 +52,7 @@ library
         parsec, mtl, filepath,
         http-client, http-client-tls,
         bytestring, http-types, text,
-        process
+        process, directory
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -71,7 +71,7 @@ executable haskell-musical-composition
         parsec, mtl, filepath,
         http-client, http-client-tls,
         bytestring, http-types, text,
-        process,
+        process, directory,
         haskell-musical-composition
 
     hs-source-dirs:   app
