--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -39,6 +39,7 @@ library
         Input.Messages
         Visual.UploadFile
         Visual.CreateScore
+        Visual.OpenHtml
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -52,7 +53,8 @@ library
         parsec, mtl, filepath,
         http-client, http-client-tls,
         bytestring, http-types, text,
-        process, directory
+        process, directory, scotty,
+        wai-middleware-static, split
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -72,6 +74,8 @@ executable haskell-musical-composition
         http-client, http-client-tls,
         bytestring, http-types, text,
         process, directory,
+        scotty, wai-middleware-static,
+        split,
         haskell-musical-composition
 
     hs-source-dirs:   app
