--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -40,6 +40,7 @@ library
         Visual.UploadFile
         Visual.CreateScore
         Visual.OpenHtml
+        Visual.ToJSON
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -54,7 +55,8 @@ library
         http-client, http-client-tls,
         bytestring, http-types, text,
         process, directory, scotty,
-        wai-middleware-static, split
+        wai-middleware-static, split,
+        aeson
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -75,7 +77,7 @@ executable haskell-musical-composition
         bytestring, http-types, text,
         process, directory,
         scotty, wai-middleware-static,
-        split,
+        split, aeson,
         haskell-musical-composition
 
     hs-source-dirs:   app
