--- a/haskell-musical-composition.cabal
+++ b/haskell-musical-composition.cabal
@@ -56,7 +56,7 @@ library
         bytestring, http-types, text,
         process, directory, scotty,
         wai-middleware-static, split,
-        aeson
+        aeson, aeson-pretty
     hs-source-dirs:   src
     default-language: Haskell2010
 
@@ -77,7 +77,7 @@ executable haskell-musical-composition
         bytestring, http-types, text,
         process, directory,
         scotty, wai-middleware-static,
-        split, aeson,
+        split, aeson, aeson-pretty,
         haskell-musical-composition
 
     hs-source-dirs:   app
